# wuyi-library-auto

./: .gitignore  ANDROID_SDK_INSTALL.md  ENVIRONMENT_STATUS.md  FWQ_UPDATE.md  README.md  SETUP.md  fwq-qd.bat  fwq-tz.bat  install-android-sdk.bat  install-android-sdk.ps1  install-sdk-manual.ps1  install-sdk-simple.ps1  install-sdk.ps1
library-fwq/: .env.example  .gitignore  README.md  package.json  pyproject.toml  tailwind.config.js
library-fwq/scripts/: build-css.sh
library-fwq/systemd/: wuyi-prevent-auto.service
library-fwq/tests/: conftest.py  test_account_password_cipher.py  test_account_pool_migration.py  test_account_pool_service.py  test_account_pool_settings.py  test_account_service.py  test_auto_reservation_loop.py  test_auto_reservation_service.py  test_automation_task_service.py  test_daily_status_refresher.py  test_database.py  test_logging_scrub.py  test_logs_page_pool_audit_tab.py  test_manual_rebook_tester.py  test_manual_reserve_service.py  test_monitor_loop.py  test_package_data.py  test_pool_audit_log_repository.py  test_pool_reaper_job.py  test_pool_reaper_lifespan.py  test_rebook_service.py  test_target_seat.py  test_web_account_pool_view.py  test_web_api_active_account.py  test_web_api_automation_task.py  test_web_api_middleware.py  test_web_app.py  test_web_base_rendering.py  test_web_base_template.py  test_web_bulk_import_to_idle.py  test_web_client_tokens.py  test_web_dashboard_router.py  test_web_random_pick.py  test_wuyi_bridge.py
library-window/: README.md  config.example.json  pyproject.toml  sitecustomize.py  wuyi-seat-bot.spec
library-window/scripts/: build_exe.py  build_web_assets.py
scripts/: verify_all.py  (+2 more)
(+571 files in other folders)
