[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wuyi-seat-bot"
dynamic = ["version"]
description = "武夷学院自习室座位预约自动化工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak>=1.0,<2.0",
    "cryptography>=44.0,<46.0",
    "httpx>=0.28,<1.0",
    "pillow>=10.0,<12.0",
    "pystray>=0.19,<1.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0,<7.0",
]
test = [
    "pytest>=8.0,<10.0",
    "hypothesis>=6.100,<7.0",
]

[project.scripts]
wuyi-seat-bot = "wuyi_seat_bot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "wuyi_seat_bot.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wuyi_seat_bot = ["web/*.html", "web/*.css", "web/*.js"]
